# clio-core

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CPPLINT.cfg  GPU_ALLOCATION_FINAL_STATUS.md  GPU_ALLOCATION_STATUS.md  GPU_IPCMANAGER_IMPLEMENTATION_SUMMARY.md  MANIFEST.in  PART3_COMPLETE.md  PART3_IMPLEMENTATION_STATUS.md  README.md  install.sh  pyproject.toml  setup.py
.claude/: settings.local.json
.claude-plugin/: marketplace.json
.claude/agents/: cpp-debug-analyzer.md
.devcontainer/: Dockerfile  README.md  devcontainer.json
.devcontainer/cpu/: Dockerfile  devcontainer.json
.devcontainer/nvidia-gpu/: Dockerfile  devcontainer.json
.github/workflows/: build-and-test.yml  build-containers.yaml  build-core-containers.yaml  build-dep-containers.yaml  build-dist.yml  build-pip.yml  cpplint.yml  publish.yml  sanitizers.yml
CI/: calculate_coverage.sh  lsan_suppressions.txt  run_sanitizers.sh  validate_marketplace.py
cmake/: IowarpCoreCommon.cmake
context-assimilation-engine/: CMakeLists.txt
context-assimilation-engine/core/: CMakeLists.txt
context-assimilation-engine/core/include/wrp_cae/core/: core_client.h  core_runtime.h  core_tasks.h
context-assimilation-engine/core/include/wrp_cae/core/autogen/: core_methods.h
context-assimilation-engine/core/src/: core_runtime.cc
context-assimilation-engine/core/src/autogen/: core_lib_exec.cc
context-assimilation-engine/core/src/factory/: binary_file_assimilator.cc  globus_file_assimilator.cc  hdf5_file_assimilator.cc
context-assimilation-engine/core/util/: wrp_cae_omni.cc
context-assimilation-engine/docs/: omni.md
context-assimilation-engine/test/unit/: wrp_config.yaml
context-assimilation-engine/test/unit/binary_assim/: test_binary_assim.cc
context-assimilation-engine/test/unit/error_test/: test_error_handling.cc
context-assimilation-engine/test/unit/hdf5_assim/: test_hdf5_assim.cc
context-assimilation-engine/test/unit/range_test/: test_range_assim.cc
context-exploration-engine/: CMakeLists.txt
context-exploration-engine/api/: CMakeLists.txt
context-runtime/: CMakeLists.txt  README.md
context-runtime/benchmark/: CMakeLists.txt  wrp_run_thrpt_benchmark.cc
context-runtime/cmake/: ChimaeraConfig.cmake.in
context-runtime/config/: chimaera_default.yaml
context-runtime/util/: CMakeLists.txt  chi_refresh_repo.cc  chimaera.cc  chimaera_cmd_compose.cc  chimaera_cmd_migrate.cc  chimaera_cmd_monitor.cc  chimaera_cmd_refresh_repo.cc  chimaera_cmd_runtime_start.cc  chimaera_cmd_runtime_stop.cc  chimaera_commands.h  chimaera_compose.cc  chimaera_monitor.cc  chimaera_start_runtime.cc  chimaera_stop_runtime.cc
context-transfer-engine/: CMakeLists.txt
context-transfer-engine/adapter/filesystem/: CMakeLists.txt
context-transfer-engine/uvm/: CMakeLists.txt
context-transfer-engine/uvm/include/wrp_cte/uvm/: gpu_vmm.h
context-transfer-engine/uvm/src/: gpu_vmm.cu
context-transfer-engine/uvm/test/: probe_max_va.cu  test_gpu_vmm.cu
context-transfer-engine/wrapper/: CMakeLists.txt
context-transfer-engine/wrapper/python/: CMakeLists.txt  core_bindings.cc  test_bindings.py  test_context_interface.py  test_tag_bindings.py  test_tag_compilation_bindings.py  test_tag_wrapper_bindings.py
context-transfer-engine/wrapper/rust/: Cargo.toml  build.rs
context-transfer-engine/wrapper/rust/shim/: shim.cc  shim.h
context-transfer-engine/wrapper/rust/src/: ffi_c.rs  lib.rs
context-transport-primitives/: CMakeLists.txt
context-transport-primitives/benchmark/: CMakeLists.txt  README.md  allocator_benchmark.cc  run_comparison.sh
context-transport-primitives/src/: CMakeLists.txt  malloc_allocator.cc  system_info.cc
context-transport-primitives/src/compression/: dense_nn_predictor.cc  linreg_table_predictor.cc  qtable_predictor.cc  xgboost_predictor.cc
context-transport-primitives/test/unit/: CMakeLists.txt
context-transport-primitives/test/unit/allocator/: CMakeLists.txt  allocator_test.h  test_alloc.cc  test_hshm_malloc.cc  test_mp_allocator.cc  test_mp_allocator_multiprocess.cc  test_sub_alloc.cc
context-transport-primitives/test/unit/allocators/: test_buddy_allocator.cc
context-transport-primitives/test/unit/backend/: CMakeLists.txt
context-transport-primitives/test/unit/compress/: CMakeLists.txt  compression_benchmark_results.csv  plot_lossy_benchmark_results.py  plot_parameter_study.py  test_compress.cc  test_compress_benchmark.cc  test_compress_libpressio.cc  test_compress_lossy_parameter_study.cc  test_compress_parameter_study.cc  test_dense_nn_predictor.cc  test_xgboost_predictor.cc
context-transport-primitives/test/unit/data_structures/: test_rb_tree_pre.cc  test_slist_pre.cc  vector.cc
context-transport-primitives/test/unit/data_structures/ipc/: CMakeLists.txt  test_rb_tree_pre.cc
context-transport-primitives/test/unit/data_structures/priv/: CMakeLists.txt  test_priv_vector.cc
context-transport-primitives/test/unit/data_structures/serialization/: CMakeLists.txt
context-transport-primitives/test/unit/encrypt/: CMakeLists.txt  test_encrypt.cc
context-transport-primitives/test/unit/gpu/: CMakeLists.txt  test_gpu_malloc.cc  test_gpu_shm_mmap.cc
context-transport-primitives/test/unit/io/: test_async_io.cc
context-transport-primitives/test/unit/lightbeam/: CMakeLists.txt  distributed_lightbeam_test.cc  lightbeam_transport_test.cc  shm_transport_test.cc  socket_transport_full_test.cc  socket_transport_test.cc  test_lightbeam_new.cc
context-transport-primitives/test/unit/solvers/: CMakeLists.txt
context-transport-primitives/test/unit/thread/: CMakeLists.txt
context-transport-primitives/test/unit/types/: CMakeLists.txt  test_util.cc
context-transport-primitives/test/unit/util/: CMakeLists.txt  test_config_parse.cc  test_numbers.cc
context-visualizer/: CMakeLists.txt
docker/: build-cpu.Dockerfile  build.Dockerfile  deploy-cpu.Dockerfile  deploy.Dockerfile  deps-cpu.Dockerfile  deps-nvidia.Dockerfile  docker-compose.yaml  local.Dockerfile  local.sh
iowarp_core/: _cli.py
runtime/: CMakeLists.txt
test/: simple_test.h
(+341 files in other folders)
