[build-system]
requires = ["setuptools>=61.0", "wheel", "cmake>=3.10", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "iowarp-core"
dynamic = ["version"]
description = "IOWarp Core: High-performance distributed I/O and task execution runtime"
readme = "README.md"
requires-python = ">=3.8"
license = "BSD-3-Clause"
authors = [
    {name = "IOWarp Team", email = "grc@illinoistech.edu"}
]
keywords = ["iowarp", "hpc", "distributed-computing", "io-buffering", "task-runtime"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C++",
    "Topic :: System :: Distributed Computing",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/iowarp"
"Bug Tracker" = "https://github.com/iowarp/iowarp/issues"

[project.scripts]
wrp_cae_omni = "iowarp_core._cli:wrp_cae_omni"
wrp_cte = "iowarp_core._cli:wrp_cte"
wrp_runtime = "iowarp_core._cli:wrp_runtime"
chi_refresh_repo = "iowarp_core._cli:chi_refresh_repo"
chimaera_compose = "iowarp_core._cli:chimaera_compose"
chimaera_start_runtime = "iowarp_core._cli:chimaera_start_runtime"
chimaera_stop_runtime = "iowarp_core._cli:chimaera_stop_runtime"
test_binary_assim = "iowarp_core._cli:test_binary_assim"
test_error_handling = "iowarp_core._cli:test_error_handling"
test_hdf5_assim = "iowarp_core._cli:test_hdf5_assim"
test_range_assim = "iowarp_core._cli:test_range_assim"

[tool.setuptools]
packages = ["iowarp_core"]

[tool.setuptools.package-data]
iowarp_core = [
    "lib/*.so",
    "lib/*.so.*",
    "lib/*.a",
    "lib/*.dylib",
    "lib/**/*.so",
    "lib/**/*.so.*",
    "lib/**/*.a",
    "lib/**/*.dylib",
    "include/**/*.h",
    "include/**/*.hpp",
    "include/**/*.hxx",
    "bin/*"
]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"
tag_regex = "^v(?P<version>[0-9]+\\.[0-9]+\\.[0-9]+)$"
